--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest --coverage",
     "build": "rimraf dist && tsc",
-    "lint": "tsc --noEmit && eslint src/**/*.ts"
+    "lint": "tsc --noEmit && eslint src/**/*.ts",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [
     "csgostats.gg",
@@ -23,7 +24,7 @@
   "license": "AGPL-3.0-only",
   "dependencies": {
     "axios": "^0.24.0",
-    "csgostatsgg-scraper": "^1.1.0",
+    "csgostatsgg-scraper": "^1.1.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "fs-extra": "^10.0.0",
