--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "author": "claabs",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.24.0",
     "csgostatsgg-scraper": "^1.1.1",
+    "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "fs-extra": "^10.0.0",
