Add commit sha to action

--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -42,4 +42,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64
+          build-args: |
+            COMMIT_SHA=${{ github.sha }}
 
