Add prototype for rendering out charts of the score algorithms

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.1",
+    "nodeplotlib": "^0.7.6",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
