--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "@keyv/sqlite": "^2.1.0",
     "axios": "^0.24.0",
     "csgostatsgg-scraper": "^1.1.3",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^14.2.0",
     "fs-extra": "^10.0.0",
-    "hybrid-disk-cache": "^0.2.0",
+    "keyv": "^4.0.5",
     "moment": "^2.29.1",
     "pino": "^7.6.3",
     "pino-pretty": "^7.3.0",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
+    "@types/keyv": "^3.1.3",
     "@types/node": "^16.11.10",
     "@types/steamapi": "^2.2.2",
     "@types/steamid": "^2.0.1",
