--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "ts-node src/index.ts",
     "charts": "ts-node src/charts/generate.ts",
     "docker:build": "docker build . -t ghcr.io/claabs/csgo-sus:latest --target deploy",
-    "docker:run": "mkdir -p volume && chmod 777 volume && docker run --rm -ti --security-opt seccomp=\"https://raw.githubusercontent.com/ulixee/secret-agent/main/tools/docker/seccomp_profile.json\" -v $(pwd)/volume:/csgo-sus --env-file .env ghcr.io/claabs/csgo-sus:latest"
+    "docker:run": "mkdir -p volume && chmod 777 volume && docker run --rm -ti --security-opt seccomp=unconfined -v $(pwd)/volume:/csgo-sus --env-file .env -e CACHE_DIR=/csgo-sus ghcr.io/claabs/csgo-sus:latest"
   },
   "keywords": [
     "csgostats.gg",
