Switch to better-sqlite for cache

--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
   },
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
-    "@keyv/sqlite": "^2.1.0",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "@keyv/sqlite": "^3.0.0",
     "axios": "^0.25.0",
     "csgostatsgg-scraper": "^1.1.3",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^14.2.0",
+    "dotenv": "^14.3.2",
     "fs-extra": "^10.0.0",
     "keyv": "^4.0.5",
     "moment": "^2.29.1",
     "pino": "^7.6.4",
-    "pino-pretty": "^7.5.0",
+    "pino-pretty": "^7.5.1",
     "source-map-support": "^0.5.21",
     "steamapi": "^2.2.0",
     "steamcommunity-inventory": "^2.0.5",
@@ -55,13 +55,13 @@
     "@types/node": "^16.11.21",
     "@types/steamapi": "^2.2.2",
     "@types/steamid": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
     "nodeplotlib": "^0.7.6",
