--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "@keyv/sqlite": "^3.0.0",
+    "@stdlib/stats-incr-wmean": "^0.0.7",
     "axios": "^0.25.0",
     "csgostatsgg-scraper": "^1.1.3",
     "discord-api-types": "^0.26.1",
