--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rimraf dist && tsc",
     "lint": "tsc --noEmit && eslint src/**/*.ts",
     "start": "ts-node src/index.ts",
+    "start:debug": "SA_SHOW_BROWSER=true ts-node src/index.ts",
     "charts": "ts-node src/charts/generate.ts",
     "docker:build": "docker build . -t ghcr.io/claabs/csgo-sus:latest --target deploy",
     "docker:run": "mkdir -p volume && chmod 777 volume && docker run --rm -ti --security-opt seccomp=unconfined -v $(pwd)/volume:/csgo-sus --env-file .env -e CACHE_DIR=/csgo-sus ghcr.io/claabs/csgo-sus:latest"
@@ -29,20 +30,20 @@
   },
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.3.0",
-    "@keyv/sqlite": "^3.0.0",
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "@keyv/sqlite": "^3.5.2",
     "@stdlib/stats-incr-wmean": "^0.0.7",
-    "axios": "^0.26.0",
-    "csgostatsgg-scraper": "^1.2.3",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0",
-    "fs-extra": "^10.0.1",
-    "keyv": "^4.1.1",
-    "moment": "^2.29.1",
-    "pino": "^7.8.0",
-    "pino-pretty": "^7.5.3",
+    "axios": "^0.27.2",
+    "csgostatsgg-scraper": "^1.2.4",
+    "discord-api-types": "^0.33.0",
+    "discord.js": "^13.7.0",
+    "dotenv": "^16.0.1",
+    "fs-extra": "^10.1.0",
+    "keyv": "^4.3.0",
+    "moment": "^2.29.3",
+    "pino": "^7.11.0",
+    "pino-pretty": "^7.6.1",
     "source-map-support": "^0.5.21",
     "steamapi": "^2.2.0",
     "steamcommunity-inventory": "^2.0.5",
@@ -51,26 +52,25 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.4.1",
-    "@types/keyv": "^3.1.3",
-    "@types/node": "^16.11.25",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.11.36",
     "@types/steamapi": "^2.2.2",
     "@types/steamid": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.0",
     "nodeplotlib": "^0.7.6",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.6.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.0",
     "types-package-json": "^2.0.39",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.2"
   },
   "engines": {
     "node": "16"
