--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@discordjs/rest": "^0.4.1",
     "@keyv/sqlite": "^3.5.2",
     "@stdlib/stats-incr-wmean": "^0.0.7",
+    "@ulixee/hero-core": "^2.0.0-alpha.6",
     "axios": "^0.27.2",
-    "csgostatsgg-scraper": "^1.2.4",
+    "csgostatsgg-scraper": "^1.5.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
